[tool.poetry]
name = "cloud-cover-ai-chatbot"
version = "0.1.0"
description = "A robust chatbot application leveraging Microsoft's AutoGen library for backend logic and Streamlit for an interactive frontend, encapsulating a multi-agent conversation framework for dynamic, real-time user interactions."
authors = ["Shawn Albert <shawn.c.albert@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.27.2"
boto3 = "^1.28.62"
autogen = "^1.0.16"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.9.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
